# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1225 2010-05-31 15:41:19 dz Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta1 (2010/??/??)
 - (2010/05/28) Fixed bug#5262 - Sort by "pending time" includes ticket with no
    pending state.
 - (2010/05/28) Added option to use TicketPendingTimeSet() to null out the
    Pending Time, similar to the implementation for TicketFreeTimeSet().
 - (2010/05/21) Fixed bug#4459 - Two related error messages in S/MIME if you
    call it and it's disabled, and one message is enough.
 - (2010/05/21) Fixed bug#5377 - Show all users in AdminUser as a default.
 - (2010/05/20) Fixed bug#1846 - AdminCustomerUserGroup shows all CustomerUsers,
    even if you have thousands of them.
 - (2010/05/20) Fixed bug#5103 - Searching for non-existing company does not
    return "no results found".
 - (2010/05/20) Implemented bug#1701 - In customer's ticket overview, subject
    should come from the first article.
 - (2010/05/20) Fixed bug#5186 - Prepend fwd: instead of re: to the subject of
    forwarded mails.
 - (2010/05/19) Added Groups and Roles support to Event Based Notifications.
    You can now also send a notification to agens in a certain group or role.
 - (2010/05/19) Implemented bug#4337 - Added lock state to ticket search.
 - (2010/05/19) Reworked Kernel::System::Ticket API to have more intuitive
    wording (is still compat. to OTRS 1.x and 2.x).
    CustomerPermission()  -> TicketCustomerPermission()
    InvolvedAgents()      -> TicketInvolvedAgentsList()
    LockIsTicketLocked()  -> TicketLockGet()
    LockSet()             -> TicketLockSet()
    MoveList()            -> TicketMoveList()
    MoveTicket()          -> TicketQueueSet()
    MoveQueueList()       -> TicketMoveQueueList()