@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="iso-8859-1" ?>
 <otrs_config version="1.0" init="Framework">
-    <CVS>$Id: Framework.xml,v 1.302 2010-06-02 10:11:48 fn Exp $</CVS>
+    <CVS>$Id: Framework.xml,v 1.303 2010-06-02 10:59:19 mb Exp $</CVS>
     <ConfigItem Name="SecureMode" Required="1" Valid="1">
         <Description Translatable="1">If enabled, the web installer (http://yourhost.example.com/otrs/installer.pl) can't be used. This setting should be set to "Yes" to prevent your system from being hijacked. If set to "No", you can reinstall your system. Your current basic configuration will be used to pre-populate the questions within the installer script. Also disables if not active, the GenericAgent, PackageManager and SQL Box, since it's possible to use it for destructive write queries such as DROP DATABASE, and also to steal user passwords.</Description>
         <Group>Framework</Group>
@@ -3690,6 +3690,22 @@ Your OTRS Notification Master
                 <Item Key="PrefKey">UserTheme</Item>
                 <Item Key="Prio">1000</Item>
                 <Item Key="Activ">0</Item>
+            </Hash>
+        </Setting>
+    </ConfigItem>
+    <ConfigItem Name="CustomerPreferencesGroups###TimeZone" Required="0" Valid="1">
+        <Description Translatable="1">All parameters for the Time-Zone object in the customer preferences.</Description>
+        <Group>Framework</Group>
+        <SubGroup>Frontend::Customer::Preferences</SubGroup>
+        <Setting>
+            <Hash>
+                <Item Key="Module">Kernel::Output::HTML::PreferencesTimeZone</Item>
+                <Item Key="Column">User Profile</Item>
+                <Item Key="Label" Translatable="1">Time Zone</Item>
+                <Item Key="Key" Translatable="1">Time Zone</Item>
+                <Item Key="PrefKey">UserTimeZone</Item>
+                <Item Key="Prio">5000</Item>
+                <Item Key="Activ">1</Item>
             </Hash>
         </Setting>
     </ConfigItem>
